Add programs and speakers dynamically with javascript

--- a/index.html
+++ b/index.html
@@ -24,5 +24,29 @@
         <h2 class="opaque">2023.01.04(WED) ~ 06(FRI)</h2>
         <p class="opaque"><span>@</span> Eko Hotels & suites, Victoria Island, Lagos Nigeria.</p>
     </section>
+
+    <section class="program" id="program">
+        <h2 class="main-program white">Main Program</h2>
+        <div class="small-underline"></div>
+        <div class="program-list"></div>
+        <p class="desktop see-program white"><a href="#" class="white opaque">SEE THE WHOLE PROGRAM</a></p>
+        <button class="join white mobile">Join Blockchain Convention 2023</button>
+    </section>
+
+    <section class="lecturer-list">
+        <h2 class="opaque">Speakers</h2>
+        <div class="small-underline"></div>
+        <div class="lecturer-grid"> 
+            
+            <button class="more mobile" onclick="mobileDisplay()">MORE <svg width="52" height="52" viewBox="0 0 24 24" style="fill: red;">
+                <path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z" />
+              </svg>
+              </button>
+              <button class="more non-display mobile" onclick="mobileDisplay()">LESS<svg width="52" height="52" viewBox="0 0 24 24" fill="red">
+                <path d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"/>
+              </svg>
+            </button>
+        </div>
+    </section>
 </body>
 </html>
