Add partners and footer for mobile

--- a/index.html
+++ b/index.html
@@ -48,5 +48,31 @@
             </button>
         </div>
     </section>
+
+    <section class="partners white" id="partner">
+        <h2 class="opaque">Partners</h2>
+        <div class="small-underline"></div>
+        <div class="partner-list">
+           
+            <img src="images/coinbase.png" alt="coinbase-logo">
+            <img src="images/IBM.png" alt="coinbase-logo">
+            <img src="images/coinme.png" alt="coinme-logo">
+            <img src="images/consensys.webp" alt="consensys-logo">
+            <!-- <img src="images/spring.png" alt="spring-logo"> -->
+            <img src="images/blockFi.png" alt="spring-logo">
+            <img src="images/moonPay.svg" alt="spring-logo">
+        </div>
+
+    </section>
+    <footer>
+        <div class="footer-left">
+            <p>&copy;Herox</p>
+            <p>Tech-hub</p>
+        </div>
+        <div class="footer-right opaque">
+            <p>2023 Blockchain Lecture</p>
+            <p>All rights reserved</p>
+        </div>
+    </footer>
 </body>
 </html>
