Add desktop version of main page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,40 @@
     <title>Herox TEch Lecture</title>
 </head>
 <body>
+    <header>
+        <div class="first-header desktop">
+            <ul class="list">
+                <li><a href="#" class="link fa fa-facebook"></a></li>
+                <li><a href="#" class="link fa fa-twitter"></a></li>
+                <li><a href="#" class="link">English</a></li>
+                <li><a href="#" class="link">My page</a></li>
+                <li><a href="#" class="link">Log out</a></li>
+            </ul>
+        </div>
+
+        <div class="second-header desktop">
+            <div class="logo">
+                <a href="index.html" class="dark">
+                    <p>Herox <br> Tech-hub</p>
+                    <p class="year red">BT-2023</p>
+                </a>
+            </div>
+            <ul class="list">
+                <li class="mobile close">
+                    <svg width="40" height="40" viewBox="0 0 24 24" fill="black" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z" fill="#212121"/>
+                      </svg>
+                </li>
+                <li><a href="about.html" class="link link2 about">About</a></li>
+                <li><a href="#program" class="link link2">Program</a></li>
+                <li><a href="#partner" class="link link2">Sponsor</a></li>
+                <li><a href="#" class="link link2">News</a></li>
+                <li><a href="#" class="link link2 register">Register</a></li>
+            </ul>
+        </div>
+
+        <div class="popup"></div>
+    </header>
     <section class="top-section dark">
         <div class="hamburger mobile">
             <div class="bar1 bar "></div>
