Add different image behind speaker pix depending on screen size

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
         <p class="sub-heading red">"Annual Technological Lecture!"</p>
         <h1 class="main-heading red">Topic:Future of blockchain <br> in African Economy</h1>
-        <div class="tech-explain opaque"><p>Every Year the herox tech hub conducts a training on the most trending technology for the past year.This year will attracts experts from all over the world to discuss blockchain technology.</p></div>
+        <div class="tech-explain opaque"><p>Every Year the herox tech hub conducts a lecture on the most trending technology for the past year.This year will attract experts from all over the world to discuss blockchain technology.</p></div>
         <h2 class="opaque">2023.01.04(WED) ~ 06(FRI)</h2>
         <p class="opaque"><span>@</span> Eko Hotels & suites, Victoria Island, Lagos Nigeria.</p>
     </section>
@@ -92,9 +92,8 @@
             <img src="images/IBM.png" alt="coinbase-logo">
             <img src="images/coinme.png" alt="coinme-logo">
             <img src="images/consensys.webp" alt="consensys-logo">
-            <!-- <img src="images/spring.png" alt="spring-logo"> -->
-            <img src="images/blockFi.png" alt="spring-logo">
-            <img src="images/moonPay.svg" alt="spring-logo">
+            <img src="images/blockFi.png" alt="blockFi-logo">
+            <img src="images/moonPay.svg" alt="moonPay-logo">
         </div>
 
     </section>
