resolve linter errors

--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
         <div class="small-underline"></div>
         <div class="lecturer-grid"> 
             
-            <button class="more mobile" onclick="mobileDisplay()">MORE <svg width="52" height="52" viewBox="0 0 24 24" style="fill: red;">
+            <button class="more mobile" >MORE <svg width="52" height="52" viewBox="0 0 24 24" style="fill: red;">
                 <path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z" />
               </svg>
               </button>
-              <button class="more non-display mobile" onclick="mobileDisplay()">LESS<svg width="52" height="52" viewBox="0 0 24 24" fill="red">
+              <button class="more non-display mobile" >LESS<svg width="52" height="52" viewBox="0 0 24 24" fill="red">
                 <path d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"/>
               </svg>
             </button>
