Remove commented out code and update README

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
-    <title>Herox TEch Lecture</title>
+    <title>Herox Tech Lecture</title>
 </head>
 <body>
     <header>
