Add reviewer recommended changes

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                         <path d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z" fill="#212121"/>
                       </svg>
                 </li>
+                <li><a href="index.html" class="link link2">Home</a></li>
                 <li><a href="about.html" class="link link2 about">About</a></li>
                 <li><a href="#program" class="link link2">Program</a></li>
                 <li><a href="#partner" class="link link2">Sponsor</a></li>
