--- a/about.html
+++ b/about.html
@@ -37,20 +37,12 @@
           </a>
         </div>
         <ul class="list">
-          <li class="mobile close">
-            <svg
-              width="40"
-              height="40"
-              viewBox="0 0 24 24"
-              fill="black"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z"
-                fill="#212121"
-              />
-            </svg>
-          </li>
+            <li class="mobile close">
+                <svg width="40" height="40" viewBox="0 0 24 24" fill="black" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z" fill="#212121"/>
+                  </svg>
+            </li>
+          <li><a href="index.html" class="link link2">Home</a></li>
           <li><a href="#" class="link link2 about">About</a></li>
           <li><a href="#program" class="link link2">Program</a></li>
           <li><a href="#partner" class="link link2">Sponsor</a></li>
@@ -84,7 +76,7 @@
     </section>
     <section class="About-logo">
       <div>
-        <h3 class="opaque">
+        <h3 class="opaque logo-p">
           Herox Tech-hub <br />
           Blockchain Lecture 2023
         </h3>
