--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
                   </svg>
             </li>
           <li><a href="index.html" class="link link2">Home</a></li>
-          <li><a href="#" class="link link2 about">About</a></li>
+          <li><a href="#" class="link link2 selected">About</a></li>
           <li><a href="#program" class="link link2">Program</a></li>
           <li><a href="#partner" class="link link2">Sponsor</a></li>
           <li><a href="#" class="link link2">News</a></li>
