Fix linter error after adding reviewer suggested update

--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
         <div class="bar2 bar"></div>
         <div class="bar3 bar"></div>
       </div>
-      <h1 class="main-heading red aboutpg">Topic:Future of blockchain <br />in African Economy <div class="small-underline aboutpg"></div></h1>
+      <h1 class="main-heading red aboutpg">Topic:Future of blockchain <br />in African Economy <div class="small-underline aboutpg desktop"></div></h1>
       <div class="tech-explain aboutpg">
         <p class="opaque">
           Every Year the herox tech hub conducts an annual lecture on the most trending
